@@ -4,7 +4,7 @@
  *
  * Copyright (C) 1999-2005 Id Software, Inc.
  * Copyright (C) 2005 Stuart Dalton <badcdev@gmail.com>
- * Copyright (C) 2010 O.Sezer <sezero@users.sourceforge.net>
+ * Copyright (C) 2010-2011 O.Sezer <sezero@users.sourceforge.net>
  *
  * $Id$
  *
