@@ -4,7 +4,8 @@
 
 	$Id$
 
-	Copyright (C) 1996-1997  Id Software, Inc.
+	Copyright (C) 1996-2001 Id Software, Inc.
+	Copyright (C) 2010-2011 O. Sezer <sezero@users.sourceforge.net>
 
 	This program is free software; you can redistribute it and/or
 	modify it under the terms of the GNU General Public License
