@@ -6,6 +6,8 @@
  * you pass with WildMidi_OpenBuffer() when you do WildMidi_Close().
  * The library seems experimental, so, you are on your own with this.
  *
+ * Copyright (C) 2010-2011 O.Sezer <sezero@users.sourceforge.net>
+ *
  * $Id$
  *
  * This program is free software; you can redistribute it and/or modify
