@@ -4,6 +4,10 @@ Development Progress	:
 ---------------------------
 
 2011-01-30 (SVN):
+    * updated copyright years for several sound related sources.
+    * snd_mp3.c: removed useless rudimentary info checks.
+
+2011-01-30 (SVN):
     * snd_mp3.c: sync with sox project CVS repo and add mp3_madseek()
       as a new private function. make S_MP3_CodecRewindStream() to use
       the new mp3_madseek() function.
